--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         #log::after{
             content: '';
             display: block;
-            height: 4px;
+            height:0.2vw;
             width: 0;
             background: #1f5651;
             transition: all 0.5s;
